--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
                             <transformers>
                                 <!-- add Main-Class to manifest file -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>main.Main</mainClass>
+                                    <mainClass>main.ExecutionDriver</mainClass>
 
                                 </transformer>
                             </transformers>
