--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <outputFile>./bin/Alk.jar</outputFile>
+                            <outputFile>./bin/alk.jar</outputFile>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>main.ExecutionDriver</mainClass>
